# ImproveTraining

./: CMakeLists.txt  README.md  main.cpp
CPP/: CPP_README
CPP/DelegatedConstructor/: DelegatedConstructor.cpp  DelegatedConstructor.h
CPP/InheritedConstructor/: InheritedConstructor.cpp  InheritedConstructor.h
CPP/RvalueReference/: RvalueReference.cpp  RvalueReference.h
CPP/decltype/: decltype.cpp  decltype.h
DataStructure/: DataStructure_README
DesignPatterns/: DesignPatterns_README
Iniclue/: CPPHeader.h  CommonHeader.h  CommonTraining.h  UtilsHeader.h
OperatingSystem/: OperatingSystem_README
Utils/: Signal.cpp  Signal.h
